--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -6,10 +6,14 @@
     );
     height: 100vh;
     .login-container {
-        // border: 1px solid red;
+        position: absolute;
         width: 400px;
-        margin: 0 auto;
-        height: 100%;
+        height: 450px;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
         border-radius: 10px;
         background-color: white;
         .login-content {
