--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,17 @@
-@import "variables";
-@import "../../node_modules/bootstrap/scss/bootstrap";
+@import 'variables';
+@import '../../node_modules/bootstrap/scss/bootstrap';
 
-$fa-font-path : "~@fortawesome/fontawesome-free-webfonts/webfonts";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fontawesome.scss";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-regular.scss";
-@import "~@fortawesome/fontawesome-free-webfonts/scss/fa-brands.scss";
+// $fa-font-path: '~@fortawesome/fontawesome-free-webfonts';
+// @import '~@fortawesome/fontawesome-free-webfonts/scss/fontawesome.scss';
+// @import '~@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss';
+// @import '~@fortawesome/fontawesome-free-webfonts/scss/fa-regular.scss';
+// @import '~@fortawesome/fontawesome-free-webfonts/scss/fa-brands.scss';
 
-@import "base";
-@import "form";
+// Import Font Awesome SCSS files directly without custom path
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+
+@import 'base';
+@import 'form';
