--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,6 +1,5 @@
 .home-header-container {
     height: 60px;
-    border: 1px solid red;
     width: 100%;
     padding: 0 50px;
     .home-header-content {
@@ -9,14 +8,13 @@
         display: flex;
         .left-content {
             width: 25%;
-            border: 1px solid red;
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 5px;
 
             .menu-header {
-                font-size: 25px;
+                font-size: 28px;
                 color: gray;
                 cursor: pointer;
             }
@@ -30,7 +28,6 @@
         }
         .center-content {
             width: 50%;
-            border: 1px solid red;
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -42,10 +39,153 @@
         }
         .right-content {
             width: 25%;
-            border: 1px solid red;
+            // padding: 0 10px;
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             align-items: center;
+
+            .support {
+                padding-right: 100px;
+                cursor: pointer;
+                i {
+                    font-size: 15px;
+                    color: #49bce2;
+                    margin-right: 5px;
+                }
+            }
+
+            .language-vi {
+                cursor: pointer;
+                opacity: 0.2;
+
+                &.active {
+                    opacity: 1;
+                    span {
+                        color: #49bce2;
+                    }
+                }
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+            .language-en {
+                cursor: pointer;
+                margin: 0 10px;
+                opacity: 0.2;
+
+                &.active {
+                    opacity: 1;
+                    span {
+                        color: #49bce2;
+                    }
+                }
+                &:hover {
+                    opacity: 0.8;
+                }
+            }
+        }
+    }
+}
+
+.home-header-banner {
+    background-image: url(../../assets/images/bacground.jpg);
+    display: flex;
+    flex-direction: column;
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    // opacity: 0.9;
+
+    .content-up {
+        height: 70%;
+        padding-top: 15px;
+        background: linear-gradient(
+            rgba(126, 126, 126, 0.25),
+            rgba(255, 255, 255, 0.1)
+        );
+        .title1 {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            text-shadow: 1px 1px 1px #333;
+            color: white;
+            margin-bottom: 5px;
+            padding-top: 30px;
+        }
+
+        .title2 {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: 30px;
+            text-shadow: 1px 1px 1px #333;
+            color: white;
+            font-weight: bold;
+            margin-bottom: 15px;
+        }
+
+        .search {
+            // border: 1px solid red;
+            width: fit-content;
+            text-align: center;
+            margin: 0 auto;
+            padding: 10px;
+            border-radius: 30px;
+            background-color: #f7d800;
+            i {
+                margin: 0 5px;
+            }
+            input {
+                height: 30px;
+                width: 360px;
+                background: transparent;
+                border: none;
+                outline: none;
+            }
+        }
+    }
+
+    .content-down {
+        height: 30%;
+        display: flex;
+        justify-content: space-around;
+        align-items: end;
+        gap: 30px;
+        background: linear-gradient(
+            rgba(255, 255, 255, 0.1),
+            rgba(255, 255, 255, 0.9),
+            rgba(255, 255, 255, 1)
+        );
+
+        .option {
+            text-align: center;
+            display: flex;
+            // justify-content: space-around;
+            gap: 30px;
+
+            .option-child {
+                width: 100px;
+
+                .img {
+                    width: fit-content;
+                    background: white;
+                    border-radius: 10%;
+                    height: 50px;
+                    width: 50px;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 0 auto;
+                }
+
+                .text-child {
+                    font-size: 16px;
+                    font-weight: 500;
+                    &:hover {
+                        cursor: pointer;
+                        color: #49bce2;
+                    }
+                }
+            }
         }
     }
 }
