--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -2,10 +2,15 @@
     height: 60px;
     width: 100%;
     padding: 0 50px;
+    position: sticky;
+    top: 0;
+    background: #fff;
+    z-index: 10;
     .home-header-content {
         width: 100%;
         height: 100%;
         display: flex;
+
         .left-content {
             width: 25%;
             display: flex;
@@ -147,6 +152,7 @@
     .content-down {
         height: 30%;
         display: flex;
+        padding-bottom: 10px;
         justify-content: space-around;
         align-items: end;
         gap: 30px;
