--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -9,6 +9,9 @@
     height: 40px;
     position: relative;
     .languages {
+        .welcome {
+            margin-right: 15px;
+        }
         .language-en {
             margin-left: 10px;
             margin-right: 15px;
