--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -4,10 +4,11 @@
     width: 44px !important;
     height: 48px !important;
     color: #fff !important;
-    border: 2px solid #d7d7d7;
+    border: 1px solid rgb(181, 231, 237) !important;
+    border-radius: 10px !important;
     background: #fff !important;
     &:hover {
-        background: #d7d7d7 !important;
+        opacity: 0.8;
     }
 }
 
@@ -17,11 +18,15 @@
     width: 44px !important;
     height: 48px !important;
     color: #fff !important;
-    border: 2px solid #d7d7d7;
+    border: 1px solid rgb(181, 231, 237) !important;
+    border-radius: 10px !important;
     background: #fff !important;
     &:hover {
-        background: #d7d7d7 !important;
+        opacity: 0.8;
     }
+}
+.slick-disabled {
+    display: none !important;
 }
 .slick-prev::before,
 .slick-next::before {
@@ -31,10 +36,11 @@
 
 .section-share {
     &.section-specialty {
-        background: #f5f5f5;
+        background: #edfafb;
     }
     &.section-oustanding-doctor {
-        background: #f5f5f5;
+        // background: #edfafb;
+        background-image: url('../../assets/images/background/140311-background5.png');
     }
     &.section-about {
         height: 500px !important;
@@ -43,14 +49,22 @@
     }
 
     .section-body {
+        // .doctor-container {
+        //     border: 1px solid red;
+        //     padding: 5px 1px;
+        // }
         .section-customize {
+            .outer-bg {
+                padding-top: 10px;
+            }
             .bg-img {
                 width: 320px;
                 height: 150px;
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: cover;
-                background-color: #eee;
+                background-color: #edfafb;
+
                 &.section-specialty {
                     background-image: url('../../assets/images/specialty/xuongkhop.jpg');
                 }
@@ -58,7 +72,13 @@
                     background-image: url('../../assets/images/medical-facility/benhvien.jpg');
                 }
                 &.section-oustanding-doctor {
-                    background-image: url('../../assets/images/specialty/thankinh.jpg');
+                    // background-image: url('../../assets/images/specialty/thankinh.jpg');
+                    width: 140px; /* Điều chỉnh kích thước của container */
+                    height: 140px; /* Điều chỉnh kích thước của container */
+                    overflow: hidden;
+                    border-radius: 50%; /* Bo tròn ảnh */
+                    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Đổ bóng cho ảnh */
+                    margin: 0 auto;
                 }
                 &.section-HandBook {
                     background-image: url('../../assets/images/specialty/tieuhoa.jpg');
@@ -77,7 +97,7 @@
         flex-direction: column;
 
         .section-header {
-            height: 60px;
+            height: 40px;
             display: flex;
             justify-content: space-between;
             padding: 20px 0;
@@ -95,8 +115,9 @@
                 border: none;
                 outline: none;
                 color: black;
-                background: #ebebeb;
+                background: rgb(218, 243, 246);
                 text-transform: uppercase;
+                border-radius: 10px;
                 &:hover {
                     cursor: pointer;
                     background: #49bce2;
