--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -155,7 +155,6 @@
         padding-bottom: 10px;
         justify-content: space-around;
         align-items: end;
-        gap: 30px;
         background: linear-gradient(
             rgba(255, 255, 255, 0.1),
             rgba(255, 255, 255, 0.9),
@@ -165,31 +164,45 @@
         .option {
             text-align: center;
             display: flex;
-            // justify-content: space-around;
-            gap: 30px;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            gap: 50px;
 
             .option-child {
-                width: 100px;
+                width: 150px;
+                height: 150px;
+                border: 1px solid #ddd;
+                padding: 10px 24px;
+                border-radius: 20%;
+                background-image: url('../../assets/images/background/background_child.png');
+                &:hover {
+                    opacity: 0.9;
+                    cursor: pointer;
+                    color: #49bce2;
+                }
 
                 .img {
                     width: fit-content;
-                    background: white;
+                    background: radial-gradient(
+                        circle,
+                        rgb(255, 211, 84),
+                        rgb(255, 239, 195),
+                        rgb(254, 253, 251),
+                        rgb(255, 255, 255)
+                    );
                     border-radius: 10%;
-                    height: 50px;
-                    width: 50px;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    margin: 0 auto;
+                    height: 100%;
+                    width: 75%;
+                    padding: 15px;
+                    overflow: hidden;
                 }
 
                 .text-child {
+                    margin-top: 5px;
                     font-size: 16px;
                     font-weight: 500;
-                    &:hover {
-                        cursor: pointer;
-                        color: #49bce2;
-                    }
+                    text-align: center;
                 }
             }
         }
