detail doctor page and Permissions menu

--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -4,7 +4,7 @@
     padding: 0 50px;
     position: sticky;
     top: 0;
-    background: #fff;
+    background-color: rgb(237, 255, 250);
     z-index: 10;
     .home-header-content {
         width: 100%;
