--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -1,5 +1,5 @@
 .manage-doctor-container {
-    padding: 5px;
+    padding: 0 10px;
 
     .manage-doctor-title {
         text-align: center;
@@ -17,6 +17,20 @@
         padding: 5px;
         background-color: orange;
         color: black;
+        cursor: pointer;
+        &:hover {
+            opacity: 0.9;
+        }
+    }
+    .create-content-doctor {
+        margin-top: 20px;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        outline: none;
+        border: none;
+        padding: 5px;
+        background-color: #007bff;
+        color: #fff;
         cursor: pointer;
         &:hover {
             opacity: 0.9;
