save data schedule into database

--- a/src/containers/System/Doctor/ManageSchedule.scss
+++ b/src/containers/System/Doctor/ManageSchedule.scss
@@ -16,6 +16,10 @@
             outline: none;
             border: 1px solid #ccc;
             min-width: 160px;
+            &.active {
+                background-color: rgb(224, 157, 33);
+                color: #fff;
+            }
         }
 
         button {
