--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -32,6 +32,18 @@
             }
         }
     }
+    .schedule-doctor {
+        margin: 0 100px;
+        display: flex;
+        min-height: 250px;
+        padding: 10px 0;
+        .content-left {
+            width: 50%;
+        }
+        .content-right {
+            width: 50%;
+        }
+    }
     .detail-info {
         border: 1px solid #ccc;
         padding: 0 100px;
