--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -216,3 +216,215 @@
 .bookingcare-2020_svg__cls-2 {
     fill: #ffc10e;
 }
+
+@media only screen and (max-width: 1500px) {
+    .home-header-container {
+        height: 60px;
+        width: 100%;
+        padding: 0 50px;
+        position: sticky;
+        top: 0;
+        background-color: rgb(237, 255, 250);
+        z-index: 10;
+        .home-header-content {
+            width: 100%;
+            height: 100%;
+            display: flex;
+
+            .left-content {
+                width: 25%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 5px;
+
+                .menu-header {
+                    font-size: 28px;
+                    color: gray;
+                    cursor: pointer;
+                }
+                .header-logo {
+                    font-size: 20px;
+                    cursor: pointer;
+                    .my-svg {
+                        width: 65%;
+                    }
+                }
+            }
+            .center-content {
+                width: 50%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                .child-content {
+                    font-weight: 400;
+                    font-size: 12px;
+                }
+            }
+            .right-content {
+                width: 25%;
+                // padding: 0 10px;
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+
+                .support {
+                    padding-right: 100px;
+                    cursor: pointer;
+                    i {
+                        font-size: 15px;
+                        color: #49bce2;
+                        margin-right: 5px;
+                    }
+                }
+
+                .language-vi {
+                    cursor: pointer;
+                    opacity: 0.2;
+
+                    &.active {
+                        opacity: 1;
+                        span {
+                            color: #49bce2;
+                        }
+                    }
+                    &:hover {
+                        opacity: 0.8;
+                    }
+                }
+                .language-en {
+                    cursor: pointer;
+                    margin: 0 10px;
+                    opacity: 0.2;
+
+                    &.active {
+                        opacity: 1;
+                        span {
+                            color: #49bce2;
+                        }
+                    }
+                    &:hover {
+                        opacity: 0.8;
+                    }
+                }
+            }
+        }
+    }
+
+    .home-header-banner {
+        background-image: url(../../assets/images/bacground.jpg);
+        display: flex;
+        flex-direction: column;
+        height: 600px;
+        background-size: cover;
+        background-position: center;
+        // opacity: 0.9;
+
+        .content-up {
+            height: 70%;
+            padding-top: 15px;
+            background: linear-gradient(
+                rgba(126, 126, 126, 0.25),
+                rgba(255, 255, 255, 0.1)
+            );
+            .title1 {
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 30px;
+                text-shadow: 1px 1px 1px #333;
+                color: white;
+                margin-bottom: 5px;
+                padding-top: 30px;
+            }
+
+            .title2 {
+                text-align: center;
+                text-transform: uppercase;
+                font-size: 30px;
+                text-shadow: 1px 1px 1px #333;
+                color: white;
+                font-weight: bold;
+                margin-bottom: 15px;
+            }
+
+            .search {
+                // border: 1px solid red;
+                width: fit-content;
+                text-align: center;
+                margin: 0 auto;
+                padding: 10px;
+                border-radius: 30px;
+                background-color: #f7d800;
+                i {
+                    margin: 0 5px;
+                }
+                input {
+                    height: 30px;
+                    width: 360px;
+                    background: transparent;
+                    border: none;
+                    outline: none;
+                }
+            }
+        }
+
+        .content-down {
+            height: 30%;
+            display: flex;
+            padding-bottom: 10px;
+            justify-content: space-around;
+            align-items: end;
+            background: linear-gradient(
+                rgba(255, 255, 255, 0.1),
+                rgba(255, 255, 255, 0.9),
+                rgba(255, 255, 255, 1)
+            );
+
+            .option {
+                text-align: center;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                gap: 50px;
+
+                .option-child {
+                    width: 110px;
+                    height: 115px;
+                    border: 1px solid #ddd;
+                    padding: 0px 15px;
+                    border-radius: 20%;
+                    background-image: url('../../assets/images/background/background_child.png');
+                    &:hover {
+                        opacity: 0.9;
+                        cursor: pointer;
+                        color: #49bce2;
+                    }
+
+                    .img {
+                        width: fit-content;
+                        background: radial-gradient(
+                            circle,
+                            rgb(255, 211, 84),
+                            rgb(255, 239, 195),
+                            rgb(254, 253, 251),
+                            rgb(255, 255, 255)
+                        );
+                        border-radius: 10%;
+                        height: 80%;
+                        width: 80%;
+                        padding: 15px;
+                        overflow: hidden;
+                    }
+
+                    .text-child {
+                        margin-top: 5px;
+                        font-size: 13px;
+                        font-weight: 500;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+}
