--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -1,6 +1,5 @@
 .slick-prev {
-    left: -10px !important;
-    z-index: 10000 !important;
+    left: -80px !important;
     width: 44px !important;
     height: 48px !important;
     color: #fff !important;
@@ -14,7 +13,6 @@
 
 .slick-next {
     right: -10px !important;
-    z-index: 10000 !important;
     width: 44px !important;
     height: 48px !important;
     color: #fff !important;
@@ -40,7 +38,6 @@
         margin-top: 50px;
     }
     &.section-oustanding-doctor {
-        // background: #edfafb;
         background-image: url('../../assets/images/background/140311-background5.png');
     }
     &.section-about {
@@ -56,39 +53,46 @@
     }
 
     .section-body {
+        margin-left: 50px;
         .doctor-container {
             padding: 5px 1px;
             display: flex;
-            gap: 10px !important;
+            gap: 100px !important;
         }
         .section-customize {
-            border: 1px solid #cac6c6;
-            background-color: #fff;
+            // border: 1px solid #cac6c6;
+            // background-color: #fff;
             border-radius: 10px;
             padding-bottom: 10px;
+            width: 200px;
+            height: 200px;
             cursor: pointer;
 
             .outer-bg {
                 padding-top: 10px;
             }
             .bg-img {
-                width: 320px;
-                height: 150px;
+                width: 350px;
+                height: 170px;
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: cover;
                 background-color: #edfafb;
 
                 &.section-specialty {
-                    background-image: url('../../assets/images/specialty/xuongkhop.jpg');
+                    width: 300px;
+                    height: 200px;
+                    overflow: hidden;
+                    margin: 0 auto;
                 }
+
                 &.section-medical-facility {
                     background-image: url('../../assets/images/medical-facility/benhvien.jpg');
                 }
                 &.section-oustanding-doctor {
                     // background-image: url('../../assets/images/specialty/thankinh.jpg');
-                    width: 140px; /* Điều chỉnh kích thước của container */
-                    height: 140px; /* Điều chỉnh kích thước của container */
+                    width: 190px;
+                    height: 190px;
                     overflow: hidden;
                     border-radius: 50%; /* Bo tròn ảnh */
                     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Đổ bóng cho ảnh */
@@ -103,7 +107,7 @@
 }
 
 .section-share {
-    height: 330px;
+    height: 400px;
 
     .section-container {
         margin: 0 120px;
@@ -174,4 +178,102 @@
     }
 }
 
-// reset slick slider css
+.section-specialty {
+    .section-body {
+        .section-customize {
+            width: 350px !important;
+            height: 260px !important;
+            border: 1px solid #cac6c6;
+            padding: 20px 5px;
+            display: flex;
+            gap: 10px;
+            .name-specialty {
+                text-align: center;
+                margin-top: 7px;
+            }
+        }
+    }
+}
+@media only screen and (max-width: 1500px) {
+    // arrow ------------------------------------
+    .slick-prev {
+        left: -80px !important;
+        width: 44px !important;
+        height: 48px !important;
+        color: #fff !important;
+        border: 1px solid rgb(181, 231, 237) !important;
+        border-radius: 10px !important;
+        background: #fff !important;
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    .slick-next {
+        right: -30px !important;
+        width: 44px !important;
+        height: 48px !important;
+        color: #fff !important;
+        border: 1px solid rgb(181, 231, 237) !important;
+        border-radius: 10px !important;
+        background: #fff !important;
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+    .slick-disabled {
+        display: none !important;
+    }
+    .slick-prev::before,
+    .slick-next::before {
+        font-family: 'Glyphicons Halflings' !important;
+        color: red !important;
+    }
+    .section-body {
+        .doctor-container {
+            padding: 5px 1px;
+            display: flex;
+            gap: 100px !important;
+        }
+        .section-customize {
+            // border: 1px solid #cac6c6;
+            // background-color: #fff;
+            border-radius: 10px;
+            padding-bottom: 10px;
+            width: 200px;
+            height: 200px;
+            cursor: pointer;
+
+            .outer-bg {
+                padding-top: 10px;
+            }
+            .bg-img {
+                &.section-specialty {
+                    width: 245px !important;
+                    height: 165px !important;
+                    overflow: hidden;
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+    // ------------------------------------------------------------------------------
+    // specialty---------------------------------------------------------------------
+    .section-specialty {
+        .section-body {
+            .section-customize {
+                width: 280px !important;
+                height: 220px !important;
+                border: 1px solid #cac6c6;
+                padding: 20px 5px;
+                display: flex;
+                gap: 10px;
+                .name-specialty {
+                    text-align: center;
+                    margin-top: 5px;
+                }
+            }
+        }
+    }
+}
+// ------------------------------------------------------------------------------
