complete page specialty

--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -38,6 +38,7 @@
                     border: none;
                     min-width: 150px;
                     border-radius: 3px;
+                    background-color: #ffc10e;
                     &:hover {
                         background-color: #5cc2cd;
                         color: #fff;
