--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,5 +1,6 @@
 .doctor-detail-container {
     height: 500px;
+    background-image: url('../../../assets/images/background/background_child.png');
 
     .intro-contor {
         display: flex;
@@ -45,11 +46,17 @@
         }
     }
     .detail-info {
-        border: 1px solid #ccc;
-        padding: 0 100px;
+        padding: 0 100px 20px 100px;
         padding-top: 20px;
         background-color: #f9f9f9;
         margin-bottom: 20px;
+
+        .detail-doctor-content {
+            background-image: url('../../../assets/images/background/background_child.png');
+            border: 1px solid #faf9f9;
+            border-radius: 8px;
+            padding: 15px 50px 15px 20px;
+        }
 
         img {
             width: 100%;
