Update styles and translations

--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -41,5 +41,11 @@
     }
     .doctor-info-individual {
         margin-bottom: 10px;
+        .input-feild {
+            height: 38px;
+        }
+    }
+    .manage-doctor-editor {
+        margin-top: 50px;
     }
 }
