--- a/src/containers/HomePage/HomeFooter.scss
+++ b/src/containers/HomePage/HomeFooter.scss
@@ -5,8 +5,8 @@
     padding-bottom: 0 !important;
 
     .container {
-        width: 80%;
-        margin: 0 auto;
+        max-width: 1600px;
+        padding: 0 100px;
 
         .footer-top {
             display: flex;
@@ -27,7 +27,7 @@
                 }
             }
             .footer-right {
-                margin-top: -10px;
+                margin-top: 10px;
 
                 .right-item {
                     display: flex;
