Update styles and translations

--- a/src/containers/System/Clinic/ManageClinic.scss
+++ b/src/containers/System/Clinic/ManageClinic.scss
@@ -18,5 +18,8 @@
             background: orange;
             color: #fff;
         }
+        .editer {
+            margin-top: 20px;
+        }
     }
 }
